tests/examples/good/cond/good010.lat
int main() {
    if (1 < 2) {
        printString("1 < 2");
    }

    if (2 <= 2) {
        printString("2 <= 2");
    }

    if (1 <= 2) {
        printString("1 <= 2");
    }

    if (1 == 1) {
        printString("1 == 1");
    }
    
    if (2 >= 2) {
        printString("2 >= 2");
    }

    if (2 >= 1) {
        printString("2 >= 1");
    }

    if (2 > 1) {
        printString("2 > 1");
    }


    return 0;
}
