tests/examples/bad/class_self_keyword_override_01.lat
int main() {
    return 0;
}
 
class A {
    int self;
}

